# agwer

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
benchmarks/: bench_cpu.py  bench_norm.py  index.html
cli/: index.html
docs/: benchmarks.md  cli.md  examples.md  index.md  usage.md
docs/stylesheets/: extra.css
examples/: index.html
search/: search_index.json
src/agwer/: __init__.py  agentic.py  align.py  bench.py  classic.py  cli.py  edits.py  entity.py  formats.py  hallucination.py  measures.py  multispeaker.py  process.py  text.py
src/agwer/normalizers/: __init__.py  basic.py  english.py
src/agwer/tests/: fixtures_cpwer_golden.json  fixtures_tcpwer_golden.json  test_banded.py  test_cli.py  test_cpwer.py  test_entity_hallucination.py  test_evaluate.py  test_formats.py  test_her.py  test_measures.py  test_normalizers.py  test_paper_reference.py  test_pretokenized.py  test_rir.py  test_tcpwer.py  test_text.py
stylesheets/: extra.css
tests/: fixtures_alignment_equiv.json  fixtures_whisper_golden.json  test_compositional.py  test_evaluate.py  test_measures.py
usage/: index.html
