[project]
name = "agwer"
version = "0.4.6"
description = "Agent-oriented word error rate, named entity F1 score, and hallucination package."
readme = "README.md"
authors = [
    { name = "Huck Yang" },
]
requires-python = ">=3.9"
dependencies = [
    "rapidfuzz>=3.6",
]
license = "Apache-2.0"
keywords = [
    "speech recognition",
    "WER",
    "generative error correction",
    "voice agents",
    "evaluation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]
parquet = ["pyarrow>=14"]

[project.urls]
Repository = "https://github.com/huckiyang/agwer"

[project.scripts]
agwer = "agwer.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I"]

[tool.hatch.build.targets.sdist]
include = ["src", "benchmarks", "README.md", "LICENSE"]
